做完第二个

--- a/study-notes/JavaScript/js-2.html
+++ b/study-notes/JavaScript/js-2.html
@@ -1,241 +1,327 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+      user-scalable=no"
+    />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="../../assets/css/main.css" />
-</head>
-
-<body class="body-style">
-  <div>
-    <!-- Header -->
-    <div class="news">
-      <div class="news-text">
-        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
-      </div>
-    </div>
-
-    <!-- header -->
-    <div class="navigation navigation-unhome">
-      <div class="navigation-content">
-        <!-- 宇航员 -->
-        <div class="profile">
-          <div class="profile-pic"></div>
-        </div>
-        <!-- 名字 -->
-        <div class="logo logo1">Hu <br />Zanlai</div>
-        <!-- 导航 -->
-        <div class="navigation-choice">
-          <a href="../../index.html">
-            <div class="unhome-choice">主页</div>
-          </a>
-          <a href="../../study-notes.html">
-            <div class="unhome-focused unhome-choice">学习笔记</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">专业技能</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">项目经历</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">关于本站</div>
-          </a>
-          <!-- github logo -->
-          <a href="https://github.com/zanlaihu">
-            <div class="github"></div>
-          </a>
+  <body class="body-style">
+    <div>
+      <!-- Header -->
+      <div class="news">
+        <div class="news-text">
+          ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
         </div>
       </div>
-    </div>
 
-    <!-- 侧边栏 -->
-    <div class="sidebar">
-      <a href="../../study-notes.html">
-        <div class="know-name know-name-focus">JavaScript</div>
-      </a>
-      <a href="js-1.html">
-        <div class="chapter">1 什么是JavaScript</div>
-      </a>
-      <a href="js-2.html">
-        <div class="chapter chapter-choosen">2 script标签</div>
-      </a>
-      <a href="js-3.html">
-        <div class="chapter">3 语法</div>
-      </a>
-      <a href="js-4.html">
-        <div class="chapter">4 var,let,const</div>
-      </a>
-      <a href="js-5.html">
-        <div class="chapter">5 数据类型</div>
-      </a>
-      <a href="js-6.html">
-        <div class="chapter">6 对象</div>
-      </a>
-      <a href="js-7.html">
-        <div class="chapter">7 操作符</div>
-      </a>
-      <a href="js-8.html">
-        <div class="chapter">8 语句</div>
-      </a>
-    </div>
+      <!-- header -->
+      <div class="navigation navigation-unhome">
+        <div class="navigation-content">
+          <!-- 宇航员 -->
+          <div class="profile">
+            <div class="profile-pic"></div>
+          </div>
+          <!-- 名字 -->
+          <div class="logo logo1">Hu <br />Zanlai</div>
+          <!-- 导航 -->
+          <div class="navigation-choice">
+            <a href="../../index.html">
+              <div class="unhome-choice">主页</div>
+            </a>
+            <a href="../../study-notes.html">
+              <div class="unhome-focused unhome-choice">学习笔记</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">专业技能</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">项目经历</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">关于本站</div>
+            </a>
+            <!-- github logo -->
+            <a href="https://github.com/zanlaihu">
+              <div class="github"></div>
+            </a>
+          </div>
+        </div>
+      </div>
 
-    <div class="outline"></div>
+      <!-- 侧边栏 -->
+      <div class="sidebar">
+        <a href="../../study-notes.html">
+          <div class="know-name know-name-focus">JavaScript</div>
+        </a>
+        <a href="js-1.html">
+          <div class="chapter">1 什么是JavaScript</div>
+        </a>
+        <a href="js-2.html">
+          <div class="chapter chapter-choosen">2 script标签</div>
+        </a>
+        <a href="js-3.html">
+          <div class="chapter">3 语法</div>
+        </a>
+        <a href="js-4.html">
+          <div class="chapter">4 var,let,const</div>
+        </a>
+        <a href="js-5.html">
+          <div class="chapter">5 数据类型</div>
+        </a>
+        <a href="js-6.html">
+          <div class="chapter">6 对象</div>
+        </a>
+        <a href="js-7.html">
+          <div class="chapter">7 操作符</div>
+        </a>
+        <a href="js-8.html">
+          <div class="chapter">8 语句</div>
+        </a>
+      </div>
 
-    <div class="right-content">
-      <div class="content-content">
-        <h1>&lt;script&gt;标签</h1>
-        <p>&lt;script&gt;元素由网景公司创造，用来将 JavaScript 引入 HTML。它也被纳入 HTML 规范。</p>
-        <h2>&lt;script&gt;有 8 个属性：</h2>
-        <table>
-          <tr>
-            <td style="width: 80px;">src</td>
-            <td style="width: 50px;">可选</td>
-            <td>填入 URL 来引入外部文件中的 JavaScript</td>
-          </tr>
-          <tr>
-            <td>defer</td>
-            <td>可选</td>
-            <td>延迟执行。立刻开始下载 JavaScript，延迟到整个页面被解析和显示之后再运行。只对外部 JavaScript 文件有效。</td>
-          </tr>
-          <tr>
-            <td>async</td>
-            <td>可选</td>
-            <td>异步执行。立刻开始下载 JavaScript，但不必等 JavaScript 下载和执行完再加载页面。只对外部 JavaScript 文件有效。</td>
-          </tr>
-          <tr>
-            <td>integrity</td>
-            <td>可选</td>
-            <td>允许比对接收到的资源的签名与指定的加密签名以验证子资源完整性（SRI，Subresource Integrity）。如果不匹配则页面报错，不执行JavaScript
-              。用来确保内容分发网络（CDN，Content Delivery Network）不会提供恶意内容。</td>
-          </tr>
+      <div class="outline"></div>
 
-          <tr>
-            <td>charset</td>
-            <td>可选</td>
-            <td>使用 src 属性指定的代码字符集。大多数浏览器不在乎它的值，所以很少被使用。</td>
-          </tr>
-          <tr>
-            <td>crossorigin</td>
-            <td>可选</td>
-            <td>配置相关请求的 CORS（跨源资源共享）设置。默认不使用
-              CORS。crossorigin="use-credentials"意思是设置凭据标志，这样出站请求会包含凭据。crossorigin="anonymous"意思是配置文件请求不必设置凭据标志。</td>
-          </tr>
-          <tr>
-            <td>language</td>
-            <td>废弃</td>
-            <td>大多数浏览器都会忽略</td>
-          </tr>
-          <tr>
-            <td>type</td>
-            <td>可选</td>
-            <td>替代 language，但已很少被添加。表示代码块中 JavaScript 的内容类型（
-              MINE类型）。一般是“text/javascript”（尽管“text/javascript”和“text/ecmascript”已经被废弃）。JavaScript 文件的 MINE
-              类型通常是“application/x-javascript”，不过这个值有可能导致 JavaScript 被忽略。在非 IE 的浏览器中有效的 MINE
-              值还有“application/javascript”和“application/ecmascript”。如果这个值是 module，则代码会被当成 ES6 模块，代码中运行使用 import 和 export
-              关键字。</td>
-          </tr>
-        </table>
+      <div class="right-content">
+        <div class="content-content">
+          <h1>&lt;script&gt;标签</h1>
+          <p>
+            &lt;script&gt;元素由网景公司创造，用来将 JavaScript 引入
+            HTML。它也被纳入 HTML 规范。
+          </p>
+          <h2>&lt;script&gt;有 8 个属性：</h2>
+          <table>
+            <tr>
+              <td style="width: 80px">src</td>
+              <td style="width: 50px">可选</td>
+              <td>引入外部 JavaScript</td>
+            </tr>
+            <tr>
+              <td>defer</td>
+              <td>可选</td>
+              <td>
+                延迟执行。立刻开始下载
+                JavaScript，延迟到整个页面被解析和显示之后再运行。只对外部
+                JavaScript 文件有效。
+              </td>
+            </tr>
+            <tr>
+              <td>async</td>
+              <td>可选</td>
+              <td>
+                异步执行。立刻开始下载 JavaScript，但不必等 JavaScript
+                下载和执行完再加载页面。只对外部 JavaScript 文件有效。
+              </td>
+            </tr>
+            <tr>
+              <td>integrity</td>
+              <td>可选</td>
+              <td>
+                允许比对接收到的资源的签名与指定的加密签名以验证子资源完整性（SRI，Subresource
+                Integrity）。如果不匹配则页面报错，不执行JavaScript
+                。用来确保内容分发网络（CDN，Content Delivery
+                Network）不会提供恶意内容。
+              </td>
+            </tr>
+            <tr>
+              <td>charset</td>
+              <td>可选</td>
+              <td>
+                使用 src
+                属性指定的代码字符集。大多数浏览器不在乎它的值，很少被使用。
+              </td>
+            </tr>
+            <tr>
+              <td>crossorigin</td>
+              <td>可选</td>
+              <td>
+                配置相关请求的 CORS（跨源资源共享）设置。默认不使用
+                CORS。crossorigin="use-credentials"意思是设置凭据标志，这样出站请求会包含凭据。crossorigin="anonymous"意思是配置文件请求不必设置凭据标志。
+              </td>
+            </tr>
+            <tr>
+              <td>language</td>
+              <td>废弃</td>
+              <td>大多数浏览器都会忽略</td>
+            </tr>
+            <tr>
+              <td>type</td>
+              <td>可选</td>
+              <td>
+                替代 language，HTML5已不再需要特别声明。表示代码块中 JavaScript
+                的内容类型（
+                MINE类型）。一般是“text/javascript”（尽管“text/javascript”和“text/ecmascript”已经被废弃）。JavaScript
+                文件的 MINE
+                类型通常是“application/x-javascript”，不过这个值有可能导致
+                JavaScript 被忽略。在非 IE 的浏览器中有效的 MINE
+                值还有“application/javascript”和“application/Ecmascript”。如果这个值是
+                module，则代码会被当成 ES6 模块，代码中运行使用 import 和 export
+                关键字。
+              </td>
+            </tr>
+          </table>
 
-        <h2>如何使用&lt;script&gt;</h2>
-        <h3>1.直接在网页中嵌入：</h3>
-        <pre><code>
+          <h2>如何使用&lt;script&gt;</h2>
+          <h3>1.直接在网页中嵌入：</h3>
+          <pre><code>
           &lt;script&gt;
             function sayHi() {
               console.log("我最棒！");
             }
           &lt;/script&gt;
         </code></pre>
-        <p>包含在&lt;script&gt;内的代码会被从上到下解释。上面的代码解释了一个函数定义，这个函数会被保存在解释器环境中。在&lt;script&gt;内的代码被计算完成前，页面其余内容不会被加载或显示。</p>
-        <p>使用行内 JavaScript 时，代码中不能出现&lt;/script&gt。
-          比如：</p>
-        <pre><code>
+          <p>
+            包含在&lt;script&gt;内的代码会被从上到下解释。上面的代码解释了一个函数定义，这个函数会被保存在解释器环境中。在&lt;script&gt;内的代码被计算完成前，页面其余内容不会被加载或显示。
+          </p>
+          <p>使用行内 JavaScript 时，代码中不能出现&lt;/script&gt。 比如：</p>
+          <pre><code>
           &lt;script&gt;
             function sayHi() {
               console.log("&lt;/script&gt");
             }
           &lt;/script&gt;
         </code></pre>
-        <h3>2.引入外部 JavaScript</h3>
-        <pre><code>
+          <h3>2.引入外部 JavaScript</h3>
+          <pre><code>
           &lt;script src="example.js">&lt;/script&gt;
         </code></pre>
-        <p>与解释行内 JavaScript 一样，解释外部 JavaScript 也会让页面阻塞。阻塞包含下载文件的时间。使用外部文件以后就不应该再添加行内 JavaScript，即使加了也不会被执行。外部文件优先。</p>
-        <p>src 可以引用来自外部域的文件，这也是它争议最大的地方:</p>
-        <pre><code>
+          <p>
+            与解释行内 JavaScript 一样，解释外部 JavaScript
+            也会让页面阻塞。阻塞包含下载文件的时间。使用外部文件以后就不应该再添加行内
+            JavaScript，即使加了也不会被执行。外部文件优先。
+          </p>
+          <p>src 可以引用来自外部域的文件，这也是它争议最大的地方:</p>
+          <pre><code>
           &lt;script src="https://www.somewhere.com/afile.js">&lt;/script&gt;
         </code></pre>
-        <p>如果来自外部域，浏览器会向这个路径发送 GET 请求。这个请求不受浏览器同源策略限制，但返回并被执行的 JavaScript 受限制。这个请求受父页面 HTTP/HTTPS 协议的限制。</p>
-        <p>来自外部域的代码会成为页面的一部分来加载和解释，所以我们可以通过不同域分发 JavaScript。但也要小心别有用心的人可能替换这个外部域JavaScript文件，这个时候就需要 Integrity
-          属性来确保该域是一个可信的来源，虽然这个属性也不是所有浏览器都支持。</p>
+          <p>
+            如果来自外部域，浏览器会向这个路径发送 GET
+            请求。这个请求不受浏览器同源策略限制，但返回并被执行的 JavaScript
+            受限制。这个请求受父页面 HTTP/HTTPS 协议的限制。
+          </p>
+          <p>
+            来自外部域的代码会成为页面的一部分来加载和解释，所以我们可以通过不同域分发
+            JavaScript。但也要小心别有用心的人可能替换这个外部域JavaScript文件，这个时候就需要
+            Integrity
+            属性来确保该域是一个可信的来源，虽然这个属性也不是所有浏览器都支持。
+          </p>
 
-        <h3>行内代码与外部文件，选择哪个?</h3>
-        <p>虽然可以直接在页面嵌入JavaScript，但通常认为最佳体验是用外部引入的方式。理由如下：</p>
-        <p>1. 可维护性。用一个目录保存所有JavaScript文件，更容易维护。HTML与JavaScript也可以分开来独立开发。</p>
-        <p>2. 缓存。浏览器会根据特定的设置缓存所有外部链接的JavaScript文件，这意味着如果两个页面都用到同一个文件，则该文件只需下载一次。 </p>
+          <h3>行内代码与外部文件，选择哪个?</h3>
+          <p>
+            虽然可以直接在页面嵌入JavaScript，但通常认为最佳体验是用外部引入的方式。理由如下：
+          </p>
+          <p>
+            1.
+            可维护性。用一个目录保存所有JavaScript文件，更容易维护。HTML与JavaScript也可以分开来独立开发。
+          </p>
+          <p>
+            2.
+            缓存。浏览器会根据特定的设置缓存所有外部链接的JavaScript文件，这意味着如果两个页面都用到同一个文件，则该文件只需下载一次。
+          </p>
 
-        <h2>&lt;script&gt;在HTML中的位置</h2>
-        <p>曾经，流行放在head里，但是就意味着需要所有 JavaScript
-          代码都被下载、解析和解释完成后，才开始页面的渲染，浏览器在解析到&lt;body&gt;时才开始渲染页面。为了提速，JavaScript 现在流行放在&lt;body&gt;元素里的末尾。</p>
+          <h2>&lt;script&gt;在HTML中的位置</h2>
+          <p>
+            曾经，流行放在head里，但是就意味着需要所有 JavaScript
+            代码都被下载、解析和解释完成后，才开始页面的渲染，浏览器在解析到&lt;body&gt;时才开始渲染页面。为了提速，JavaScript
+            现在流行放在&lt;body&gt;元素里的末尾。
+          </p>
 
-        <h2>Integrity</h2>
-        <p>提供hash值，来验证览器获得的资源（例如从 CDN 获得的）是否被篡改。</p>
-        <p>需要服务器开启内容安全策略，即通过 HTTP 头信息的Content-Security-Policy的字段</p>
-        <pre><code>
+          <h2>Integrity</h2>
+          <p>
+            提供hash值，来验证览器获得的资源（例如从 CDN 获得的）是否被篡改。
+          </p>
+          <p>
+            需要服务器开启内容安全策略，即通过 HTTP
+            头信息的Content-Security-Policy的字段
+          </p>
+          <pre><code>
           Content-Security-Policy: require-sri-for script;
         </code></pre>
-        <p>加入integrity值，举个例子：</p>
-        <pre><code>
+          <p>加入integrity值，举个例子：</p>
+          <pre><code>
           &lt;script
           src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"
           integrity="sha384-9u9lzb/hr8e14GLHe5TEOrTiH3Qtw5DX2Zw9X/g7cqj81W2McEMx5CKOszxdb8jg" crossorigin="anonymous">
           &lt;/script&gt;
         </code></pre>
-        <p>除了对script进行校验外，还可对style进行校验。</p>
-        <p>关于Content-Security-Policy更多信息：</p>
-        <p>http://www.ruanyifeng.com/blog/2016/09/csp.html</p>
+          <p>除了对script进行校验外，还可对style进行校验。</p>
+          <p>关于Content-Security-Policy更多信息：</p>
+          <p>http://www.ruanyifeng.com/blog/2016/09/csp.html</p>
 
-        <h2>defer</h2>
-        <pre><code>
+          <h2>defer</h2>
+          <pre><code>
           &lt;script defer src="">&lt;/script&gt;
         </code></pre>
-        <p>加入 defer 后，JavaScript 会立刻下载，但会等到整个页面解析完毕后再运行。也就是在浏览器解析到&lt;/html&gt;时，才运行该脚本。</p>
-        <p>如果出现了两段被推迟的代码。HTML5 规范要求脚本按照顺序执行，第二个推迟的脚本会在第一个执行之后再执行，两者都会在 DOMContwntloaded
-          事件之前执行。不过实际中，推迟执行的脚本不一定总会按顺序执行或者在 DOMContwntloaded 事件之前执行，因此最好只包含一个这样的脚本。</p>
+          <p>
+            加入 defer 后，JavaScript
+            会立刻下载，但会等到整个页面解析完毕后再运行。也就是在浏览器解析到&lt;/html&gt;时，才运行该脚本。
+          </p>
+          <p>
+            如果出现了两段被推迟的代码。HTML5
+            规范要求脚本按照顺序执行，第二个推迟的脚本会在第一个执行之后再执行，两者都会在
+            DOMContwntloaded
+            事件之前执行。不过实际中，推迟执行的脚本不一定总会按顺序执行或者在
+            DOMContwntloaded 事件之前执行，因此最好只包含一个这样的脚本。
+          </p>
 
-        <h2>async</h2>
-        <pre><code>
+          <h2>async</h2>
+          <pre><code>
           &lt;script async src="">&lt;/script&gt;
         </code></pre>
-        <p>
-          和defer类似，但是不保证按出现顺序执行。defer也会告诉浏览器立刻下载脚本。但是浏览器不必等脚本下载和执行完再加载页面，同样也不必等其他异步脚本下载和执行再执行本异步脚本。所以，异步脚本不应该在加载期间修改DOM。
-        </p>
+          <p>
+            和defer类似，但是不保证按出现顺序执行。defer也会告诉浏览器立刻下载脚本。但是浏览器不必等脚本下载和执行完再加载页面，同样也不必等其他异步脚本下载和执行再执行本异步脚本。所以，异步脚本不应该在加载期间修改DOM。
+          </p>
 
-        <h2>&lt;noscript&gt;</h2>
-        <p>
-          针对早期浏览器不支持JavaScript的情况，出现了&lt;noscript&gt;。它可以包含任何可以出现在&lt;body&lt;中的HTML元素。并且在浏览器不支持脚本或对脚本的支持被关闭时，其内容才会被渲染,否则就会直接略过。
-        </p>
+          <h2>&lt;noscript&gt;</h2>
+          <p>
+            针对早期浏览器不支持JavaScript的情况，出现了&lt;noscript&gt;。它可以包含任何可以出现在&lt;body&lt;中的HTML元素。并且在浏览器不支持脚本或对脚本的支持被关闭时，其内容才会被渲染,否则就会直接略过。
+          </p>
 
-      </div>
+          <h2>动态加载脚本</h2>
+          <p>使用document.createElement，可以向DOM中动态添加script元素：</p>
+          <pre><code>
+          let script = document.createElement('script');
+          script.src = 'gibberish.js';
+          document.head.appendChiled(script);
+        </code></pre>
+          <p>
+            在把HTMLElement元素添加到DOM且执行这段代码之后，请求才被发送。<br />
 
-      <div class="bottom unhome-padding">
-        <div class="bottom-contact">
-          <div class="contact-title">联系方式</div>
-          <div class="contact-message">手机：13867908869</div>
-          <div class="contact-message">微信：13867908869</div>
-          <div class="contact-message">邮箱：klaus@outlook.com</div>
+            这种方式创建的脚本默认是异步加载。如果有些浏览器不支持异步，可以明确其为同步加载：
+          </p>
+          <pre><code>
+          let script = document.createElement('script');
+          script.src = 'gibberish.js';
+          script.async = false;
+          document.head.appendChild(script);
+          </code></pre>
+          <p>
+            以这种方式获取的资源对浏览器预加载器是不可见的。这会严重影响他们在资源获取队列中的优先级，从而影响性能。可以在文档头部显式声明来让预加载器知道这些动态请求文件的存在。
+          </p>
+          <pre><code>
+          &lt;link rel="preload" href="gibberish.js">
+          </code></pre>
         </div>
-        <div class="bottom-line"></div>
-        <div class="bottom-logo">
-          <div class="profile-pic"></div>
+
+        <div class="bottom unhome-padding">
+          <div class="bottom-contact">
+            <div class="contact-title">联系方式</div>
+            <div class="contact-message">手机：13867908869</div>
+            <div class="contact-message">微信：13867908869</div>
+            <div class="contact-message">邮箱：klaus@outlook.com</div>
+          </div>
+          <div class="bottom-line"></div>
+          <div class="bottom-logo">
+            <div class="profile-pic"></div>
+          </div>
+          <div class="bottom-label">Made with ❤️ by Zanlai.</div>
         </div>
-        <div class="bottom-label">Made with ❤️ by Zanlai.</div>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
