--- a/study-notes/JavaScript/js-3.html
+++ b/study-notes/JavaScript/js-3.html
@@ -1,108 +1,196 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+      user-scalable=no"
+    />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="../../assets/css/main.css" />
-</head>
-
-<body class="body-style">
-  <div>
-    <!-- Header -->
-    <div class="news">
-      <div class="news-text">
-        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
-      </div>
-    </div>
-
-    <!-- header -->
-    <div class="navigation navigation-unhome">
-      <div class="navigation-content">
-        <!-- 宇航员 -->
-        <div class="profile">
-          <div class="profile-pic"></div>
-        </div>
-        <!-- 名字 -->
-        <div class="logo logo1">Hu <br />Zanlai</div>
-        <!-- 导航 -->
-        <div class="navigation-choice">
-          <a href="../../index.html">
-            <div class="unhome-choice">主页</div>
-          </a>
-          <a href="../../study-notes.html">
-            <div class="unhome-focused unhome-choice">学习笔记</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">专业技能</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">项目经历</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">关于本站</div>
-          </a>
-          <!-- github logo -->
-          <a href="https://github.com/zanlaihu">
-            <div class="github"></div>
-          </a>
+  <body class="body-style">
+    <div>
+      <!-- Header -->
+      <div class="news">
+        <div class="news-text">
+          ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
         </div>
       </div>
-    </div>
 
-    <!-- 侧边栏 -->
-    <div class="sidebar">
-      <a href="../../study-notes.html">
-        <div class="know-name know-name-focus">JavaScript</div>
-      </a>
-      <a href="js-1.html">
-        <div class="chapter ">1 什么是JavaScript</div>
-      </a>
-      <a href="js-2.html">
-        <div class="chapter">2 script标签</div>
-      </a>
-      <a href="js-3.html">
-        <div class="chapter chapter-choosen">3 语法</div>
-      </a>
-      <a href="js-4.html">
-        <div class="chapter">4 var,let,const</div>
-      </a>
-      <a href="js-5.html">
-        <div class="chapter">5 数据类型</div>
-      </a>
-      <a href="js-6.html">
-        <div class="chapter">6 对象</div>
-      </a>
-      <a href="js-7.html">
-        <div class="chapter">7 操作符</div>
-      </a>
-      <a href="js-8.html">
-        <div class="chapter">8 语句</div>
-      </a>
-    </div>
-
-    <div class="outline"></div>
-
-    <div class="right-content">
-      <div class="content-content"></div>
-
-      <div class="bottom unhome-padding">
-        <div class="bottom-contact">
-          <div class="contact-title">联系方式</div>
-          <div class="contact-message">手机：13867908869</div>
-          <div class="contact-message">微信：13867908869</div>
-          <div class="contact-message">邮箱：klaus@outlook.com</div>
+      <!-- header -->
+      <div class="navigation navigation-unhome">
+        <div class="navigation-content">
+          <!-- 宇航员 -->
+          <div class="profile">
+            <div class="profile-pic"></div>
+          </div>
+          <!-- 名字 -->
+          <div class="logo logo1">Hu <br />Zanlai</div>
+          <!-- 导航 -->
+          <div class="navigation-choice">
+            <a href="../../index.html">
+              <div class="unhome-choice">主页</div>
+            </a>
+            <a href="../../study-notes.html">
+              <div class="unhome-focused unhome-choice">学习笔记</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">专业技能</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">项目经历</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">关于本站</div>
+            </a>
+            <!-- github logo -->
+            <a href="https://github.com/zanlaihu">
+              <div class="github"></div>
+            </a>
+          </div>
         </div>
-        <div class="bottom-line"></div>
-        <div class="bottom-logo">
-          <div class="profile-pic"></div>
+      </div>
+
+      <!-- 侧边栏 -->
+      <div class="sidebar">
+        <a href="../../study-notes.html">
+          <div class="know-name know-name-focus">JavaScript</div>
+        </a>
+        <a href="js-1.html">
+          <div class="chapter">1 什么是JavaScript</div>
+        </a>
+        <a href="js-2.html">
+          <div class="chapter">2 script标签</div>
+        </a>
+        <a href="js-3.html">
+          <div class="chapter chapter-choosen">3 语法</div>
+        </a>
+        <a href="js-4.html">
+          <div class="chapter">4 var,let,const</div>
+        </a>
+        <a href="js-5.html">
+          <div class="chapter">5 数据类型</div>
+        </a>
+        <a href="js-6.html">
+          <div class="chapter">6 对象</div>
+        </a>
+        <a href="js-7.html">
+          <div class="chapter">7 操作符</div>
+        </a>
+        <a href="js-8.html">
+          <div class="chapter">8 语句</div>
+        </a>
+      </div>
+
+      <div class="outline"></div>
+
+      <div class="right-content">
+        <div class="content-content">
+          <h1>语法</h1>
+          <h2>区分大小写</h2>
+          <p>
+            ECMAScript 中的一切都需要区分大小写。<br />
+            比如，typeof是一个关键字，不能作为函数名，但是 Typeof
+            就可以是有效的函数名。
+          </p>
+
+          <h2>标识符</h2>
+          <p>
+            标识符，就是变量、函数、属性、函数参数的名称。我们在命名变量的时候很少会遇到问题，但它其实也有规则。<br />
+
+            1. 第一个字符必须是一个字母、下划线（\_）或美元符号（$）<br />
+            2. 剩下的其他字符可以是字母、下划线、美元符号或数字<br /><br />
+
+            标识符中的字母可以是扩展 ASCII 中的字母，也可以是 UNICODE
+            的字母。但是 À 和 Æ 不推荐使用。<br />
+
+            命名方法有很多种。驼峰式与 ECMAScript
+            内置函数和对象的命名方式一致，推荐使用。<br />
+          </p>
+
+          <h2>注释</h2>
+          <p>有两种注释方法</p>
+
+          <p style="color: #29c989">
+            // 单行注释<br />
+
+            /\_ 多行<br />
+
+            注释 \_/
+          </p>
+
+          <h2>严格模式</h2>
+          <p>
+            ECMAScript5 增加了严格模式（strict mode），是一种不同的 JavaScript
+            解析和执行模型。<br />
+            启用严格模式，只要在脚本开头加上：<br /><br />
+
+            “use strict”；<br /><br />
+
+            虽然看上去好像一个多余的字符串，但它是可以被解释器识别的预处理指令。任何支持
+            JavaScript 的引擎看到它都会切换到严格模式。在严格模式下，ECMAScript3
+            的一些不规范写法会被处理，对于不安全的活动也会抛出错误。<br />
+
+            也可以对单独的一个函数执行严格模式：
+          </p>
+          <pre><code>
+            function doSth() {
+              "use strict";
+            }
+          </code></pre>
+
+          <h2>语句</h2>
+          <p>
+            ECMAScript
+            语句用分号结尾。也可以省略分号，那将由解析器来决定语句在哪里结尾。为了避免解析器段错句，强烈推荐要加上。
+          </p>
+
+          <h2>关键字与保留字</h2>
+          <p>
+            for|do|while|switch|case<br />
+            if|else|function|return|in<br />
+            try|catch|throw|break|continue<br />
+            var|const|new|this|class<br />
+            instanceof|typeof|import|export|super<br />
+            debugger|finally|yield|default|delete<br />
+            static|extends|void|with<br /><br />
+          </p>
+
+          <p>
+            规范中还描述了一组未来的保留字。他们是保留给将来做关键字。其中<br />
+            始终保留:<br />
+
+            enum<br />
+
+            严格模式下保留：<br />
+
+            implements package public private<br />
+
+            interface protected static let<br />
+
+            模块代码中保留:<br />
+
+            await
+          </p>
         </div>
-        <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+
+        <div class="bottom unhome-padding">
+          <div class="bottom-contact">
+            <div class="contact-title">联系方式</div>
+            <div class="contact-message">手机：13867908869</div>
+            <div class="contact-message">微信：13867908869</div>
+            <div class="contact-message">邮箱：klaus@outlook.com</div>
+          </div>
+          <div class="bottom-line"></div>
+          <div class="bottom-logo">
+            <div class="profile-pic"></div>
+          </div>
+          <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+        </div>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
