--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div class="ins-title">因为兴趣使然而建立的小站</div>
             <div class="ins-ins">
-              秉承着“程序员应该多做事少说话”的原则而建立的站点。用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
+              用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
             </div>
             <div class="ins-search"></div>
           </div>
