--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -87,7 +87,7 @@
 
     <div class="right-content">
       <div class="content-content">
-        <h1>1.什么是JavaScript</h1>
+        <h1>什么是JavaScript</h1>
         <h2>JavaScript 的诞生</h2>
         <p>
           JavaScript 是一门用来与网页交互的脚本语言。它问世之初的主要功能是代替 perl等服务端语言。<br><br>
