--- a/study-notes/JavaScript/js-5.html
+++ b/study-notes/JavaScript/js-5.html
@@ -1,108 +1,201 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+			user-scalable=no"
+    />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="../../assets/css/main.css" />
-</head>
-
-<body class="body-style">
-  <div>
-    <!-- Header -->
-    <div class="news">
-      <div class="news-text">
-        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
-      </div>
-    </div>
-
-    <!-- header -->
-    <div class="navigation navigation-unhome">
-      <div class="navigation-content">
-        <!-- 宇航员 -->
-        <div class="profile">
-          <div class="profile-pic"></div>
-        </div>
-        <!-- 名字 -->
-        <div class="logo logo1">Hu <br />Zanlai</div>
-        <!-- 导航 -->
-        <div class="navigation-choice">
-          <a href="../../index.html">
-            <div class="unhome-choice">主页</div>
-          </a>
-          <a href="../../study-notes.html">
-            <div class="unhome-focused unhome-choice">学习笔记</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">专业技能</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">项目经历</div>
-          </a>
-          <a href="">
-            <div class="unhome-choice">关于本站</div>
-          </a>
-          <!-- github logo -->
-          <a href="https://github.com/zanlaihu">
-            <div class="github"></div>
-          </a>
+  <body class="body-style">
+    <div>
+      <!-- Header -->
+      <div class="news">
+        <div class="news-text">
+          ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
         </div>
       </div>
-    </div>
 
-    <!-- 侧边栏 -->
-    <div class="sidebar">
-      <a href="../../study-notes.html">
-        <div class="know-name know-name-focus">JavaScript</div>
-      </a>
-      <a href="js-1.html">
-        <div class="chapter ">1 什么是JavaScript</div>
-      </a>
-      <a href="js-2.html">
-        <div class="chapter">2 script标签</div>
-      </a>
-      <a href="js-3.html">
-        <div class="chapter">3 语法</div>
-      </a>
-      <a href="js-4.html">
-        <div class="chapter">4 var,let,const</div>
-      </a>
-      <a href="js-5.html">
-        <div class="chapter chapter-choosen">5 数据类型</div>
-      </a>
-      <a href="js-6.html">
-        <div class="chapter">6 对象</div>
-      </a>
-      <a href="js-7.html">
-        <div class="chapter">7 操作符</div>
-      </a>
-      <a href="js-8.html">
-        <div class="chapter">8 语句</div>
-      </a>
-    </div>
-
-    <div class="outline"></div>
-
-    <div class="right-content">
-      <div class="content-content"></div>
-
-      <div class="bottom unhome-padding">
-        <div class="bottom-contact">
-          <div class="contact-title">联系方式</div>
-          <div class="contact-message">手机：13867908869</div>
-          <div class="contact-message">微信：13867908869</div>
-          <div class="contact-message">邮箱：klaus@outlook.com</div>
+      <!-- header -->
+      <div class="navigation navigation-unhome">
+        <div class="navigation-content">
+          <!-- 宇航员 -->
+          <div class="profile">
+            <div class="profile-pic"></div>
+          </div>
+          <!-- 名字 -->
+          <div class="logo logo1">Hu <br />Zanlai</div>
+          <!-- 导航 -->
+          <div class="navigation-choice">
+            <a href="../../index.html">
+              <div class="unhome-choice">主页</div>
+            </a>
+            <a href="../../study-notes.html">
+              <div class="unhome-focused unhome-choice">学习笔记</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">专业技能</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">项目经历</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">关于本站</div>
+            </a>
+            <!-- github logo -->
+            <a href="https://github.com/zanlaihu">
+              <div class="github"></div>
+            </a>
+          </div>
         </div>
-        <div class="bottom-line"></div>
-        <div class="bottom-logo">
-          <div class="profile-pic"></div>
+      </div>
+
+      <!-- 侧边栏 -->
+      <div class="sidebar">
+        <a href="../../study-notes.html">
+          <div class="know-name know-name-focus">JavaScript</div>
+        </a>
+        <a href="js-1.html">
+          <div class="chapter">1 什么是JavaScript</div>
+        </a>
+        <a href="js-2.html">
+          <div class="chapter">2 script标签</div>
+        </a>
+        <a href="js-3.html">
+          <div class="chapter">3 语法</div>
+        </a>
+        <a href="js-4.html">
+          <div class="chapter">4 var,let,const</div>
+        </a>
+        <a href="js-5.html">
+          <div class="chapter chapter-choosen">5 数据类型</div>
+        </a>
+        <a href="js-6.html">
+          <div class="chapter">6 对象</div>
+        </a>
+        <a href="js-7.html">
+          <div class="chapter">7 操作符</div>
+        </a>
+        <a href="js-8.html">
+          <div class="chapter">8 语句</div>
+        </a>
+      </div>
+
+      <div class="outline"></div>
+
+      <div class="right-content">
+        <div class="content-content">
+          <h1>数据类型</h1>
+          <p>
+            红宝书将 JavaScript 数据类型归为 7 种。<br />
+
+            6 种简单类型：Undefined、Null、Boolean、Number、String、Symbol<br />
+
+            1 种复杂类型：Object<br />
+
+            BigInt和function有点争议，有人认为它们是新类型，也有人认为它们只是特殊的对象。
+          </p>
+          <h2>typeof 操作符</h2>
+          <p>
+            ECMAScript 的类型系统是松散的，所以创造了 typeof
+            操作符来确定任意变量的数据类型。它能够返回的情况一共 7 种：<br />
+
+            "undefined"表示值未定义。<br />
+
+            "boolean"表示值为布尔值。<br />
+
+            "string"表示值为字符串。<br />
+
+            "number"表示值为数值。<br />
+
+            "symbol"表示值为符号。<br />
+
+            "bigint"表示值为BigInt。<br />
+
+            "function"表示值为函数； （function 一般不认为是一种数据类型。）<br />
+            "object"表示值为对象（而不是函数）或 null；null 被识别为 object
+            是因为它被认为是一个空对象。<br />
+          </p>
+
+          <h2>Undefined</h2>
+          <p>
+            Undefined 类型只有一个值，就是特殊值 undefined。<br />
+
+            当 var 或 let 声明变量却没有给初始值，它的值就是 undefined。<br />
+            undefined 在 ECMA-262 第 3
+            版之前不存在。增加它的目的是正式明确空对象指针（Null）和未初始化变量的区别
+          </p>
+          <pre><code>
+            let message;
+            console.log(message); // undefined
+          </code></pre>
+          <p>未声明的变量也是undefined，只不过直接使用会报错。</p>
+          <pre><code>
+            // age 没有被声明
+            console.log(age); // 也是undefined，只是会报错
+          </code></pre>
+          <p>用它作为判断条件时的情况：</p>
+          <pre><code>
+            let message;
+
+            if (message) {
+              // 这个快不会执行
+            }
+            
+            if (!message) {
+              // 这个快会执行
+            }
+            
+            if (age) {
+              // 没有声明age，直接报错哦
+            }
+          </code></pre>
+          <h2>Null</h2>
+          <p>
+            这个词是发音是[nʌl]，音似“闹”。<br />
+
+            null 类型只有一个值 null，它表示一个空对象指针。<br /><br />
+
+            如上所述，声明一个变量的时候最好进行初始化。如果实在不知道一开始应该赋什么值，null
+            会是很好的选择。
+          </p>
+          <h3>ECMA-262 认为 null 和 defined 表面上相等</h3>
+          <p>因为 undefined 由 null 派生而来。</p>
+          <pre><code>
+            console.log(null == undefined); // true
+          </code></pre>
+          <h3>Null 的布尔值是假值</h3>
+
+          <h2>Boolean</h2>
+          <p>
+            Boolean(布尔值)有两个字面值：true 和
+            false。这两个布尔值不同于数字，true 不等于 1，false 不等于 0.<br />
+
+            true 和 false 必须是小写。True 和 False
+            又是另外两个标识符，不是布尔值。<br />
+
+            所有 ECMAScript 的值都有布尔值的等价形式。使用
+            Boolean()就可以将他们转变。
+          </p>
         </div>
-        <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+        <div class="bottom unhome-padding">
+          <div class="bottom-contact">
+            <div class="contact-title">联系方式</div>
+            <div class="contact-message">手机：13867908869</div>
+            <div class="contact-message">微信：13867908869</div>
+            <div class="contact-message">邮箱：klaus@outlook.com</div>
+          </div>
+          <div class="bottom-line"></div>
+          <div class="bottom-logo">
+            <div class="profile-pic"></div>
+          </div>
+          <div class="bottom-label">Made with ❤️ by Zanlai.</div>
+        </div>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
