--- a/study-notes.html
+++ b/study-notes.html
@@ -56,15 +56,33 @@
 
       <!-- 侧边栏 -->
       <div class="sidebar">
-        <a href="study-notes.html"><div class="know-name know-name-focus">JavaScript</div></a>
-        <a href="study-notes/JavaScript/js-1.html"><div class="chapter">1 什么是JavaScript</div></a>
-        <a><div class="chapter">2 script标签</div></a>
-        <a><div class="chapter">3 语法</div></a>
-        <a><div class="chapter">4 var,let,const</div></a>
-        <a><div class="chapter">5 数据类型</div></a>
-        <a><div class="chapter">6 对象</div></a>
-        <a><div class="chapter">7 操作符</div></a>
-        <a><div class="chapter">8 语句</div></a>
+        <a href="study-notes.html"
+          ><div class="know-name know-name-focus">JavaScript</div></a
+        >
+        <a href="study-notes/JavaScript/js-1.html"
+          ><div class="chapter">1 什么是JavaScript</div></a
+        >
+        <a href="study-notes/JavaScript/js-2.html"
+          ><div class="chapter">2 script标签</div></a
+        >
+        <a href="study-notes/JavaScript/js-3.html"
+          ><div class="chapter">3 语法</div></a
+        >
+        <a href="study-notes/JavaScript/js-4.html"
+          ><div class="chapter">4 var,let,const</div></a
+        >
+        <a href="study-notes/JavaScript/js-5.html"
+          ><div class="chapter">5 数据类型</div></a
+        >
+        <a href="study-notes/JavaScript/js-6.html"
+          ><div class="chapter">6 对象</div></a
+        >
+        <a href="study-notes/JavaScript/js-7.html"
+          ><div class="chapter">7 操作符</div></a
+        >
+        <a href="study-notes/JavaScript/js-8.html"
+          ><div class="chapter">8 语句</div></a
+        >
       </div>
 
       <div class="right-content">
