--- a/study-notes.html
+++ b/study-notes.html
@@ -56,8 +56,13 @@
 
       <!-- 侧边栏 -->
       <div class="sidebar">
-        <a href="study-notes.html"><div class="know-name know-name-focus">JavaScript</div></a>
-        <a href="study-notes/JavaScript/js-1.html"><div class="chapter">1 什么是JavaScript</div></a>
+        <!-- JavaScript -->
+        <a href="study-notes.html"
+          ><div class="know-name know-name-focus">JavaScript</div></a
+        >
+        <a href="study-notes/JavaScript/js-1.html"
+          ><div class="chapter">1 什么是JavaScript</div></a
+        >
         <a><div class="chapter">2 script标签</div></a>
         <a><div class="chapter">3 语法</div></a>
         <a><div class="chapter">4 var,let,const</div></a>
@@ -65,6 +70,13 @@
         <a><div class="chapter">6 对象</div></a>
         <a><div class="chapter">7 操作符</div></a>
         <a><div class="chapter">8 语句</div></a>
+        <!-- react -->
+        <a href="study-notes/React/react-outline.html"
+          ><div class="know-name">react</div></a
+        >
+        <a href="study-notes/JavaScript/js-1.html"
+          ><div class="chapter">1 什么是React</div></a
+        >
       </div>
 
       <div class="right-content">
