增加毛玻璃效果

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       </div>
     </div>
 
+    <!-- 往期热点 -->
+    <div class="hot"></div>
+
     <div class="bottom">
       <div class="bottom-contact">
         <div class="contact-title">联系方式</div>
